# docs/swagger.json
@@ -7,7 +7,7 @@
         "version": "0.0"
     },
     "paths": {
-        "/api/v0/user/auth/login": {
+        "/api/v0/users/auth/login": {
             "post": {
                 "description": "login a user and set a cookie with the refresh token",
                 "tags": [
@@ -35,7 +35,7 @@
                 }
             }
         },
-        "/api/v0/user/auth/logout": {
+        "/api/v0/users/auth/logout": {
             "put": {
                 "description": "logout a user and delete the refresh token",
                 "tags": [
@@ -52,7 +52,7 @@
                 }
             }
         },
-        "/api/v0/user/auth/register": {
+        "/api/v0/users/auth/register": {
             "post": {
                 "description": "Register a new user in the system",
                 "tags": [
@@ -80,7 +80,7 @@
                 }
             }
         },
-        "/api/v0/user/auth/renew": {
+        "/api/v0/users/auth/renew": {
             "post": {
                 "description": "renew access token with refresh token",
                 "tags": [
@@ -103,6 +103,40 @@
                         "description": "OK",
                         "schema": {
                             "$ref": "#/definitions/dto.UserDto"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/v0/users/{id}/role": {
+            "patch": {
+                "security": [
+                    {
+                        "\u003cYourTypeOfKey\u003e": []
+                    },
+                    {
+                        "Token": []
+                    }
+                ],
+                "description": "An admin can update the role of a user",
+                "tags": [
+                    "users"
+                ],
+                "summary": "update user role",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "User ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "string"
                         }
                     }
                 }
@@ -194,6 +228,13 @@
                     "type": "string"
                 }
             }
+        }
+    },
+    "securityDefinitions": {
+        "Token": {
+            "type": "apiKey",
+            "name": "Authorization",
+            "in": "header"
         }
     }
 }
